--- a/5.assistant/5.1.portal/1.about.md
+++ b/5.assistant/5.1.portal/1.about.md
@@ -15,7 +15,9 @@
 
 # 校长致辞 headmaster's welcome
 
-开办瑞安市惟理达书院两年多后，总结大温州地区对教育服务的需求，为惟校准确定位的几点思考：
+各位温州地区的同仁、家长们：
+
+​	大家好，在开办瑞安市惟理达书院三年的时间里，我总结了温州地区对教育服务的需求，关于惟校的定位有如下几点思考：
 
 一、跟全球各国多元教育接轨的学校。除英语以外，将提供西班牙语、法语、德语、意大利语等的额外基础培训，为侨胞子女日后锐意在境外不同地区发展，创造条件。
 
@@ -40,11 +42,27 @@
 # 校训 missions
 
 - Seek the Truth 求真
+
+  - 
+
 - Embrace Righteousness 惟理
+
+  - 促进
+
 - Pursue Benevolence 达善
+
+  - `达善运动`，仁慈; 善举; 捐赠
+  - 旨在促进互相分享；
+
 - Strive for Excellence 臻美
 
+  
 
+  
 
 # 教职工介绍 teams
+
+
+
+我们的团队来自不同的背景；
 
