--- a/5.assistant/5.1.portal/2.admissions.md
+++ b/5.assistant/5.1.portal/2.admissions.md
@@ -1,6 +1,114 @@
-# 流程
+# REF
 
-线上报名-> 安排面试-> 参加面试 -> 确认结果/寄出录取通知书
+`线上报名`-> 
+
+`安排面试`-> 
+
+`参加面试` -> 
+
+`确认结果/寄出录取通知书`
+
+
+
+![1555895810758](media/1555895810758.png)
+
+
+
+![1555895976791](media/1555895976791.png)
+
+
+
+![1555895893940](media/1555895893940.png)
+
+![1555895953974](media/1555895953974.png)
+
+
+
+# 报名流程/How to apply
+
+`线上报名`-> 
+
+阅读policy，从微信转移到门户提交，
+
+- 关于`本校招生政策`，小班；
+- vivi后台查询
+
+`安排面试`-> 
+
+- 
+
+`参加面试` -> 
+
+
+
+`确认结果/寄出录取通知书` ->
+
+
+
+# 招生信息
+
+**主要招收对象**
+
+在大温州地区居住的港籍儿童或有意接受环球化教育的本地学子。
+
+
+
+**招收年级**
+
+- 每年招收`小学一年级`和`初一新生`；
+
+- 另外也接受`二年级`，`三年级`，`四年级`，`五年级`和`初二`的插班申请。
+
+
+
+**报名时间**
+
+- 6月初点击[link]()预登记（以正式发布的方案为准）；
+- 6月22日正式报名时，届时家长补充纸质材料。
+
+
+
+**入学条件**
+
+- 一年级入学对象须年满6周岁（2012年9月1日-2013年8月31日出生）；七年级入学对象为六年级毕业生；
+- 报名家庭须认同学校办学理念。书院将逐一安排报名家庭面谈，根据学生能力、习惯以及申请家庭在教育理念上是否与惟理达一致，酌情录取。
+
+
+
+录取通知书
+
+**报名材料**
+
+- 一年级新生须提供《儿童预防接种证》原件以及复印件；
+- 七年级新生须提供《学生基本信息表》原件以及复印件；
+- 报名新生户籍证件；
+- 入学申请表（联系学校索取）。
+
+
+
+**学校联系方式及校址**
+
+电话：65817188
+
+手机：18106778886（可加微信）
+
+电子邮箱：info@ruianva.cn
+
+校址：瑞安市周松中路88号（体育东路往东走到底，靠万松山公园）
+
+
+
+# FQ&A
+
+
+
+# OPEN DAYS
+
+
+
+
+
+
 
 # 线上报名
 
