--- a/5.assistant/5.1.portal/0.readme.md
+++ b/5.assistant/5.1.portal/0.readme.md
@@ -1,5 +1,76 @@
+# **惟理达书院门户网站 视觉设计/一期业务立项书**
 
-# 概述
+修订日期
+
+v1 杨家昊 2019.5.20
+
+
+
+# 项目概述
+
+ 	本次惟校门户网站的项目包括两块主要任务：
+
+- 基础企业视觉设计；
+  - 输出目前要做的`Corporate identity`
+    - 企业主题色系、企业LOGO、校服
+    - 建筑设计
+      - 建筑风格
+      - 建筑外立面材质
+    - PPT模板、IC卡、网站主题模板；
+
+    
+
+- 一期门户业务：
+  - `内容发布整合`；
+    - 微信分享接口；
+    - `strapi`管理文章`markdown`；
+  - `用户管理`；
+    - 微信登陆接口；
+    - 管理员权限管理；
+  - 表单提交
+    - antd组件已制作好；
+    - `招生工具`；
+    - `小程序打卡/签到提交`；
+
+
+
+## `基础VI`
+
+惟校目前美术学科有：
+
+浙江大学`园林景观设计`系：杨茜茜 
+
+中国美术学院`油画系`：谢艳芳
+
+前期已经筹划过`校训LOGO`、`教师名片`积累了一定的素材，需要由一名`ui`设计师将素材转换为`vue`工程样式模板；
+
+
+
+## `一期门户业务`
+
+- 内容新闻发布系统以及用户表单管理系统；
+
+
+
+优良的网页技术框架：
+
+1.新增业务板块时只新增新要素，而不需要或极少修改旧要素；
+
+2.全局修改样式和局部修改清晰明确（老旧的框架会出现改一处又忘记另一处的毛病，旧是全局/局部）；
+
+3.只需维护一套ui工程，适配移动浏览器/app/小程序以及pc；
+
+4.使用一次批量加载，访问缓存的加速技术，老式框架在每次切换页面都需要等待，导致体验以及使用度大幅下降；
+
+5.使用组件化技术，确保ui元素的可复用（如复用蚂蚁金服的antd组件库）；  
+
+
+
+# 立项预算
+
+15w，其中包括`外立面 材质` 以及`建筑风格`；
+
+
 
 `瑞安惟理达书院门户(portal)`  的第一阶段[板块](https://shimo.im/sheet/4wibPJ7ac8QZCXW0/ChXSi)：
 
@@ -14,7 +85,7 @@
 
 
 
-# ref
+# ui ref
 
 [halcyon伦敦国际学校](https://halcyonschool.com/our-community/)
 
@@ -22,15 +93,11 @@
 
 [美中国际GIA学校](http://griffinintl.org/)
 
-
-
 [nord anglia 诺德安达国际学校—香港分校](https://www.nordangliaeducation.com/our-schools/hong-kong/)
 
 ![1554103786990](media/1554103786990.png)
 
 [波士顿三一学校](https://www.bostontrinity.org/academics/overview)
-
-
 
 - ui
   - [校园风格ui](http://demo.cssmoban.com/cssthemes4/cpts_936_bqd/index.html)
@@ -51,8 +118,6 @@
 
 - 我认为应该继承本校的特色专栏，大类别上  惟理talk(学生，家长，老师们的图书分享以及演讲)；
 - 家长合唱团 parents choir，提供合唱团 近期排练以及演出实况
-
-
 
  
 
