--- a/5.assistant/5.1.portal/0.readme.md
+++ b/5.assistant/5.1.portal/0.readme.md
@@ -1,4 +1,4 @@
-# **惟理达书院门户网站 视觉设计/一期业务立项书**
+# **惟理达书院 视觉设计/门户网站一期业务立项书**
 
 修订日期
 
@@ -8,49 +8,63 @@ v1 杨家昊 2019.5.20
 
 # 项目概述
 
- 	本次惟校门户网站的项目包括两块主要任务：
+ 	本项目`惟校门户网站`的项目包括两块主要任务：
 
-- 基础企业视觉设计；
-  - 输出目前要做的`Corporate identity`
-    - 企业主题色系、企业LOGO、校服
-    - 建筑设计
-      - 建筑风格
-      - 建筑外立面材质
-    - PPT模板、IC卡、网站主题模板；
+- 视觉设计/`Corporate identity`
+  - 主题色、字体、**logo**、及相关衍生品
+    - 图案元素：VA，书；
+    - 输出：源文件矢量图、PPT模板、portal css文件；
 
-    
+  
+
+  - 校服
+    - 含设计与成衣制作；
+    - 春冬款、户外服；
+    - 输出：校服设计理念、成衣样品
+
+  
+
+  - 建筑设计图纸（设计：丘校、颂赞）
+    - 确认建筑风格、建筑外立面材质
+    - 输出：
+
+  
+
+  - **IC卡**（全校学生）：
+    - 由于每学期都需要制作，需本地供应商；
+    - 将全校学生的照片、条形码都整合做出来；
+    - 是否带磁；
+
+  
+
+  
 
 - 一期门户业务：
-  - `内容发布整合`；
-    - 微信分享接口；
-    - `strapi`管理文章`markdown`；
-  - `用户管理`；
-    - 微信登陆接口；
-    - 管理员权限管理；
+  - `内容管理系统`
+    - 小程序：微信分享接口；
+    - web端：`strapi`管理文章`markdown`；
+  - `用户管理`
+    - 登陆：微信登陆接口；
+    - 管理员/教师/家长/学生4类：权限管理的设计；
   - 表单提交
-    - antd组件已制作好；
     - `招生工具`；
     - `小程序打卡/签到提交`；
+    - antd组件已制作好；
 
 
 
-## `基础VI`
 
-惟校目前美术学科有：
+# 项目分工
 
-浙江大学`园林景观设计`系：杨茜茜 
+## 评审
 
-中国美术学院`油画系`：谢艳芳
-
-前期已经筹划过`校训LOGO`、`教师名片`积累了一定的素材，需要由一名`ui`设计师将素材转换为`vue`工程样式模板；
+前期已经筹划过`LOGO`，`IC卡`，`教师名片`的基础积累了一定的素材，需要由一名`ui`设计师将素材转换为`vue`工程样式模板；由两位负责项目输出物评审；
 
 
 
 ## `一期门户业务`
 
 - 内容新闻发布系统以及用户表单管理系统；
-
-
 
 优良的网页技术框架：
 
@@ -66,11 +80,9 @@ v1 杨家昊 2019.5.20
 
 
 
-# 立项预算
+# 项目预算
 
-15w，其中包括`外立面 材质` 以及`建筑风格`；
-
-
+其中包括`外立面 材质` 以及`建筑风格`；
 
 `瑞安惟理达书院门户(portal)`  的第一阶段[板块](https://shimo.im/sheet/4wibPJ7ac8QZCXW0/ChXSi)：
 
